# orgsynflow

./: .gitignore  AIREADME.md  AIREADME.out  README.md  build_exe.ps1  desktop_app.py  plan.md  pyproject.toml  run_api.py  run_cli.py
adapters/: __init__.py  aizynth_adapter.py  askcos_adapter.py  base.py  chemformer_adapter.py  goodvibes_adapter.py  opera_adapter.py  registry.py  xtb_adapter.py
api/: __init__.py  main.py
app/: eas_ts_app.py  main.py
core/: __init__.py  crest_parser.py  eas_ts_lib.py  gaussian.py  gaussian_runner.py  job_queue.py  kinetics.py  molecule.py  properties.py  quantum.py  reaction_explain.py  reaction_features.py  reaction_mapping.py  reaction_validation.py  report.py  route.py  route_layout.py  scoring.py  temp_paths.py  transition_state.py  ts_workflow.py  workspaces.py  yield_predictor.py
data/demo_routes/: aspirin.json  paracetamol.json
data/workspaces/: README.md  example-workspace.json
docs/: public-model-weights-audit.md
scripts/: orgsynflow-toggle.ps1
services/: __init__.py  workbench.py
temp/: main.py  pic.py  ts_search_lib.py
tests/: test_aizynth_adapter.py  test_chemformer_adapter.py  test_gaussian_job_queue.py  test_gaussian_runner.py  test_job_log_cache.py  test_phase1_cli.py  test_phase2_phase3.py  test_route_layout.py  test_ts_workflow.py  test_v0_v1.py  test_v2_reaction_explain.py  test_v3_gaussian.py  test_v4_kinetics.py  test_v5_yield.py  test_v6_api_service.py  test_workspace_api.py  test_xtb_adapter.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: 3dmol.d.ts  App.tsx  (+5 more)
(+42 files in other folders)
